Refactor documentation: Make Java 8+ Modern Features concise and precise
- Condensed 07_Java8_Plus_Modern_Features.md from ~1856 to 1235 lines
- Replaced verbose examples with focused, interview-ready code snippets
- Added comprehensive explanations for functional interfaces and records
- Enhanced Q&A sections with practical real-world examples
- Updated multithreading and memory management documentation
- Added Demo.java for testing purposes